--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -9,7 +9,7 @@
       background-color: aliceblue;
     }
 </style>
-  <h1>TUGAS 3 PBP</h1>
+  <h1>Tugas 3 Assignment PBP/PBD</h1>
 
   <h5>Name: </h5>
   <p>{{nama}}</p>
