--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -9,7 +9,7 @@
       background-color: aliceblue;
     }
 </style>
-  <h1>Tugas 3 Assignment PBP/PBD</h1>
+  <h1>Tugas Assignment 3 PBP/PBD</h1>
 
   <h5>Name: </h5>
   <p>{{nama}}</p>
@@ -19,20 +19,21 @@
 
   <table>
     <tr>
-      <th>Title</th>
-      <th>Release Date</th>
       <th>Watched</th>
-      <th>Review</th>
+      <th>Title</th>
       <th>Rating</th>
+      <th>Release Date</th>
+      <th>Review</th>
     </tr>
     {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
+
     {% for barang in list_barang %}
     <tr>
-      <td> {{barang.title}} </td>
-      <td> {{barang.release_date}} </td>
       <td> {{barang.watched}} </td>
-      <td> {{barang.review}} </td>
+      <td> {{barang.title}} </td>
       <td> {{barang.rating}} </td>
+      <td> {{barang.release_date}} </td>
+      <td> {{barang.review}} </td>
     </tr>
     {% endfor %}
   </table>
