--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -10,8 +10,8 @@
 <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <body>
-    <h1 style="font-family:'Pinyon Script'"><strong><center>❗❗TODOLIST❗❗</center></strong></h1>
-    <h2 style="font-family:'Poppins'"><center>Name: {{nama}}</center></h2><br>
+    <h1 style="font-family:'Pinyon Script'"><strong><center>❗❗Todolist❗❗</center></strong></h1>
+    <h2 style="font-family:'Poppins'"><center>Username: {{nama}}</center></h2><br>
 
     <div class="button-task">
         <button><a href="create-task/">Add a new task</a></button>
@@ -29,7 +29,7 @@
     th, td {
         background-color: #D8BFD8;
         padding: 10px;
-        font-family: Georgia, 'Poppins', Times, serif;
+        font-family: Georgia, 'Times New Roman', Times, serif;
     }
     body, table {
         margin-top: 20px;
