--- a/todolist/templates/taskform.html
+++ b/todolist/templates/taskform.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class = "add">
-    <h1 style="font-family:'Courier New'"><center>✅Add a task!✅</center></h1>
+    <h1 style="font-family:'Pinyon Script'"><center>✅Add a task!✅</center></h1>
 
     <form method="POST" action="">
         {% csrf_token %}
@@ -24,8 +24,8 @@
             </tr>
         </table>
 
-        <input type="submit" name="submit" value="Add Task" style="font-family: Georgia, 'Times New Roman', Times, serif; padding: 5px; margin: 10px;"/>
-        <input type="button" value="Back" onclick="history.back()" style="font-family: Georgia, 'Times New Roman', Times, serif; padding: 5px; margin: 10px;"/>
+        <input type="submit" name="submit" value="Add Task" style="font-family: 'Poppins'; padding: 5px; margin: 10px;"/>
+        <input type="button" value="Back" onclick="history.back()" style="font-family: 'Poppins'; padding: 5px; margin: 10px;"/>
     </form>
 
 </div>
@@ -37,13 +37,13 @@
     }
     tr, td {
         padding: 5px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Poppins'
     }
     input {
         padding: 3px;
     }
     form {
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Poppins'
     }
     body {
         background-color: #FFEFD5;
