--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -29,7 +29,7 @@
     th, td {
         background-color: #D8BFD8;
         padding: 10px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Poppins';
     }
     body, table {
         margin-top: 20px;
