--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -7,9 +7,11 @@
 
 {% block content %}  
 
+<link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <div class = "login">
 
-    <h1 style="font-family:'Courier New'"><center>📢Registration📢</center></h1>
+    <h1 style="font-family:'Pinyon Script'"><center>✷ Registration ✷</center></h1>
 
         <form method="POST" >  
             {% csrf_token %}  
@@ -17,7 +19,7 @@
                 {{ form.as_table }}  
                 <tr>  
                     <td></td>
-                    <td><input type="submit" name="submit" value="Register" style="font-family: Georgia, 'Times New Roman', Times, serif; padding: 5px; margin: 10px;"/></td>  
+                    <td><input type="submit" name="submit" value="Register" style="font-family: 'Poppins'; padding: 5px; margin: 10px;"/></td>  
                 </tr>  
             </table>  
             <!-- <input type="submit" name="submit" value="Daftar" style="font-family: Georgia, 'Times New Roman', Times, serif; padding: 5px; margin: 10px;"/> -->
@@ -35,12 +37,12 @@
 </body>
 <style>
     table {
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Poppins';
         padding: 5px;  
     }
     tr, td {
         padding: 5px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-family: 'Poppins';
     }
     body {
         background-color: #D3D3D3;
