--- a/todolist/templates/taskform.html
+++ b/todolist/templates/taskform.html
@@ -7,8 +7,10 @@
 
 {% block content %}
 
+<link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <div class = "add">
-    <h1 style="font-family:'Pinyon Script'"><center>✅Add a task!✅</center></h1>
+    <h1 style="font-family:'Pinyon Script'"><center>✷ Add a task! ✷</center></h1>
 
     <form method="POST" action="">
         {% csrf_token %}
@@ -37,13 +39,13 @@
     }
     tr, td {
         padding: 5px;
-        font-family: 'Poppins'
+        font-family: 'Poppins';
     }
     input {
         padding: 3px;
     }
     form {
-        font-family: 'Poppins'
+        font-family: 'Poppins';
     }
     body {
         background-color: #FFEFD5;
