Modifikasi untuk Tugas 5

--- a/todolist/templates/taskform.html
+++ b/todolist/templates/taskform.html
@@ -7,10 +7,9 @@
 
 {% block content %}
 
-<link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <div class = "add">
-    <h1 style="font-family:'Pinyon Script'"><center>✷ Add a task! ✷</center></h1>
+    <h1 style="font-family:'Poppins'"><center>✷ Add a task! ✷</center></h1>
 
     <form method="POST" action="">
         {% csrf_token %}
@@ -48,7 +47,9 @@
         font-family: 'Poppins';
     }
     body {
-        background-color: #FFEFD5;
+        background-image: url(https://cdn.discordapp.com/attachments/766058720706166805/1027459466720976957/anime-background.gif);
+        background-repeat: repeat;
+        background-size: cover;
     }
     h1 {
         font-size: 40px;
