--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -6,12 +6,13 @@
 {% endblock meta %}
 
 {% block content %}
-
 <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+<link href="http://fonts.cdnfonts.com/css/garet" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/hk-grotesk.min.css"> 
 <div class = "login">
 
-    <h1 style="font-family:'Pinyon Script'"><center>✷ Thoby's Todolist Manager ✷</center></h1>
+    <h1 style="font-family:'Poppins'"><center>✷ Login ✷</center></h1>
 
     <form method="POST" action="">
         {% csrf_token %}
@@ -50,7 +51,9 @@
 
 <style>
     body {
-        background-color: 	#FAF0E6;
+        background-image: url(https://cdn.discordapp.com/attachments/1024939818293137408/1024940693426294794/original.gif);
+        background-repeat: repeat;
+        background-size: cover;
         font-family: 'Poppins';
     }
     tr, td {
@@ -62,6 +65,9 @@
     }
     input {
         padding: 5px;
+    }
+    h1 {
+        font-size: 60px;
     }
 </style>
 {% endblock content %}
