--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -7,11 +7,10 @@
 
 {% block content %}  
 
-<link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <div class = "login">
 
-    <h1 style="font-family:'Pinyon Script'"><center>✷ Registration ✷</center></h1>
+    <h1 style="font-family:'Poppins'"><center>✷ Registration ✷</center></h1>
 
         <form method="POST" >  
             {% csrf_token %}  
@@ -45,7 +44,12 @@
         font-family: 'Poppins';
     }
     body {
-        background-color: #D3D3D3;
+        background-image: url(https://cdn.discordapp.com/attachments/766058720706166805/1027467786844385300/TediousBlindIvorygull-max-1mb.gif);
+        background-repeat: repeat;
+        background-size: cover;
+    }
+    h1 {
+        font-size: 60px;
     }
 </style>
 
